fix button spacing and footer text spacing

--- a/css/tangerine.css
+++ b/css/tangerine.css
@@ -104,7 +104,7 @@ body {
 h6 {
     /*Exclusive to banner */
     font-size: 11px;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
     padding-top: 10px;
     position: relative;
     color: rgb(219, 114, 15);
